| Summary: | ASTERISK-27036: res_pjsip: Asterisk crashes when an extension tries to use PJSIP trunk with from_user containing '@' | ||||||
| Reporter: | Maxim Vasilev (helipopolis) | Labels: | |||||
| Date Opened: | 2017-06-07 04:39:23 | Date Closed: | 2017-07-11 16:46:12 | ||||
| Priority: | Major | Regression? | |||||
| Status: | Closed/Complete | Components: | pjproject/pjsip | ||||
| Versions: | 13.13.0 13.16.0 14.5.0 | Frequency of Occurrence | Constant | ||||
| Related Issues: |
| ||||||
| Environment: | cat /etc/redhat-release CentOS release 6.9 (Final) Linux asterisk 2.6.32-042stab120.11 #1 SMP Wed Nov 16 12:05:45 MSK 2016 x86_64 x86_64 x86_64 GNU/Linux Same error with Centos 7 and 3x kernel Asterisk certified/13.13-cert3 | Attachments: | ( 0) 2017-06-13_093109.png ( 1) 2017-06-13_093415.png ( 2) backtrace.txt | ||||
| Description: | Asterisk crashes when an extension tries to call any endpoint (and PJSIP treunk) while from_user field contains "@" at called party.
I'm use PJSIP realtime configuration. from_user field in ps_endpoints table. It affect also in FreePBX with PJSIP sip-channel mode with same version of Asterisk. It checked at two clean Asterisk servers and server with FreePBX with Asterisk. The crash happens any time someone tries to dial out through a PJSIP trunk containing the '@' symbol in the from_user config option. For example, ast1 registers to ast2. ast1's trunk has "from_user = ast1@". When ast1 tries to make a call through this trunk, ast1 crashes. ast2 will crash if the endpoint that ast1 is registering to has the '@' symbol in the from_user config option and tries to call that endpoint. This is reproducible 100% of the time. | ||||||
| Comments: | By: Asterisk Team (asteriskteam) 2017-06-07 04:39:24.754-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Benjamin Keith Ford (bford) 2017-06-12 10:27:40.202-0500 Hello [~helipopolis], can you attach your extensions.conf and provide your PJSIP realtime configuration that is causing the crash? By: Maxim Vasilev (helipopolis) 2017-06-12 19:54:45.419-0500 There is no need my configuration, i checked - it affects not only pjsip trunk. It affects at any endpoint with from_user=@ or from_user=user@domain. Asterisk crashes while any trunk or extension tries call to this endpoint. By: Maxim Vasilev (helipopolis) 2017-06-12 20:01:35.420-0500 PJSIP trunk endpoint, Asterisk crashes while tries to call to. By: Maxim Vasilev (helipopolis) 2017-06-12 20:05:13.646-0500 It is FreePBX configuration of crashing Asterisk By: Benjamin Keith Ford (bford) 2017-06-16 08:49:58.018-0500 Thanks for posting the issue. We have confirmed that it is reproducible. | ||||||